--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
 /* From JS Mastery */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
+p,h1,h2,h3,h4,.btn {
+  caret-color: transparent;
+}
+
 :root {
   --font-family: 'Manrope', sans-serif;
 
